# nextjs-fastapi-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
api/: __main__.py  db.py  index.py  models.py  settings.py  utils.py
app/: layout.tsx  models.ts  page.tsx
app/components/: BookForm.tsx  BooksGrid.tsx  ErrorAlert.tsx  FileInput.tsx  Input.tsx  Pagination.tsx  Textarea.tsx
app/new-book/: page.tsx
